--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "author": "",
+  "author": "Re",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.11.6",
@@ -22,6 +22,8 @@
     "start": "nodemon --exec babel-node init.js --delay 1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
-  }
+    "nodemon": "^2.0.4",
+    "passport-local-mongoose": "^6.0.1"
+  },
+  "repository": "https://github.com/reypryma/metube-b.git"
 }
