--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "author": "Re",
+  "author": "re",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.11.6",
@@ -23,6 +23,10 @@
     "start": "nodemon --exec babel-node init.js --delay 1"
   },
   "devDependencies": {
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4",
     "passport-local-mongoose": "^6.0.1"
   },
